--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,8 @@
+*{
+  margin: auto;
+  padding: auto;
+}
+
 body {
   font-family: 'Open Sans', sans-serif;
   font-size: 16px;
@@ -68,4 +73,16 @@ textarea{
 .saveBtn i:hover {
   font-size: 20px;
   transition: all .3s ease-in-out;
+}
+
+.past {
+  background-color: grey;
+}
+
+.present {
+  background-color: red;
+}
+
+.future {
+  background-color: green;
 }
